# newswaters

./: README.md  docker-compose.local.yml  local.env
.github/workflows/: api.yml  echolocator.yml  inference.yml  job.yml  search-engine.yml  skimmer.yml  whistler.yml
beach/: .gitignore  Dockerfile.local  embedder.ipynb  main.py  requirements.txt
echolocator/: Cargo.toml  Dockerfile.deployment
echolocator/src/: bert.rs  llama.rs  main.rs
newswaters-api/: Cargo.toml  Dockerfile.deployment
newswaters-api/src/: main.rs  repository.rs
newswaters-api/src/service/: inference.rs  mod.rs
newswaters-inference/: Cargo.toml  Dockerfile.deployment  Dockerfile.local
newswaters-inference/src/: bert.rs  llama.rs  main.rs
newswaters-job/: Cargo.toml  Dockerfile.deployment  Dockerfile.local
newswaters-job/migrations/2023-09-24-042210_init/: down.sql
newswaters-job/migrations/2023-11-20-113426_alter_analyses/: up.sql
newswaters-job/migrations/2023-11-28-111810_alter_analyses/: down.sql  up.sql
newswaters-job/migrations/2023-11-29-050702_alter_analyses/: down.sql  up.sql
newswaters-job/src/: main.rs  schema.rs
newswaters-job/src/command/: analysis.rs  item.rs  mod.rs
newswaters-job/src/repository/: analysis.rs  item.rs  mod.rs
newswaters-job/src/service/: hacker_news.rs  inference.rs  mod.rs
newswaters-search-engine/: Cargo.toml  Dockerfile.deployment
newswaters-search-engine/src/: vector_repository.rs
search-engine/: Cargo.toml  Dockerfile.deployment  Dockerfile.local
search-engine/lib/: .gitignore
search-engine/src/: main.rs  text_repository.rs  vector_repository.rs
skimmer/: Cargo.toml  Dockerfile.deployment
skimmer/migrations/2023-09-24-042210_init/: down.sql  up.sql
skimmer/migrations/2023-11-12-145407_create_analyses/: down.sql  up.sql
skimmer/migrations/2023-11-20-113426_alter_analyses/: down.sql
skimmer/src/: main.rs  repository.rs  schema.rs  service.rs  text_repository.rs  vector_repository.rs
skimmer/src/command/: analysis.rs  item.rs  mod.rs
skimmer/src/repository/: analysis.rs  item.rs
skimmer/src/service/: hacker_news.rs  inference.rs  mod.rs  search_engine.rs
whistler/: Cargo.toml  Dockerfile.deployment  Dockerfile.local
whistler/src/: main.rs  repository.rs  schema.rs  service.rs  vector_repository.rs
whistler/src/service/: inference.rs  search_engine.rs
