[package]
name = "echolocator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
futures-util = "0.3.28"
reqwest = { version = "0.11.22", features = ["stream"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
