[package]
name = "echolocator"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
candle-core = { git = "https://github.com/huggingface/candle.git", rev = "0ec5ebc" }
candle-nn = { git = "https://github.com/huggingface/candle.git", rev = "0ec5ebc" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", rev = "0ec5ebc" } # For "jina-bert"
futures-util = "0.3.28"
hf-hub = "0.3.2"
reqwest = { version = "0.11.22", features = ["stream"] }
serde = { version = "1.0.189", features = ["derive"] }
tokenizers = "0.14.1"
tokio = { version = "1.33.0", features = [
    "macros",
    "rt-multi-thread",
    "process",
] }
